# Learning-Notebook

./: .gitignore  main.py  pyproject.toml
agents-course/: .env.example  01_llm_basics.ipynb  02_structured_output.ipynb  03_embeddings.ipynb  04_basic_rag.ipynb  05_advanced_rag.ipynb  06_vector_db.ipynb  07_tools.ipynb  08_react_agent.ipynb  09_memory.ipynb  10_planning_agent.ipynb  11_multi_agent.ipynb  12_reflection.ipynb  13_toolformer.ipynb  14_filesystem_agent.ipynb  15_evaluation.ipynb  16_guardrails.ipynb  17_optimization.ipynb  18_langchain_core.ipynb  19_langchain_rag.ipynb  20_langgraph.ipynb  21_langsmith.ipynb  22_industry_frameworks.ipynb  23_deep_agents.ipynb  24_deepagents.ipynb  CLAUDE.md  README.md  SKILL.md  TOPICS_GUIDE.md  azure_litellm_auth.py  requirements.txt  setup_llm.py
agents-course/capstone/: capstone_1_document_qa.ipynb  capstone_2_research_agents.ipynb  capstone_3_production_agent.ipynb  capstone_4_langgraph_agent.ipynb
