[project]
name = "learning-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.25.0",
    "autogen-agentchat>=0.4.0",
    "chromadb>=0.5.0",
    "crewai>=0.80.0",
    "deepagents>=0.1.0",
    "faiss-cpu>=1.7.4",
    "google-genai>=1.0.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "litellm>=1.40.0",
    "llama-index>=0.11.0",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
]
